Modificación de ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <section class="contenedor">
         <textarea id="areaTexto1" class="texto" placeholder="Inserte su texto aquí: " ></textarea>
-        <img class="imagen" src="/assets/hablar.png">
+        <img class="imagen" src="./assets/hablar.png">
     </section>
     <div class="contenedor-botones">
         <button onclick="encriptar();" class="boton"> Encriptar </button>
@@ -21,7 +21,7 @@
     <h2 class="subtitulo">Texto resultante</h2>
     <section class="contenedor">
         <textarea id="areaTexto2" class="texto" placeholder="Sin texto aún"></textarea>
-        <img class="imagen" src="/assets/encriptar.png">
+        <img class="imagen" src="./assets/encriptar.png">
     </section>
     <div class="contenedor-botones">
         <button class="boton" onclick="copiar();">Copiar</button>
